# api/handlers/errors.go
@@ -16,4 +16,6 @@ var (
 	errFailedToFetchCurrencies   = errors.New("failed to fetch currencies")
 	errFailedToCreateUser        = errors.New("failed to create user")
 	errFailedToGenerateToken     = errors.New("failed to generate token")
+	errUnsupportedStatsWindow    = errors.New("unsupported stats window: only 24h is supported")
+	errFailedToFetchStats        = errors.New("failed to fetch wallet stats")
 )
